output.txt
Lexing completed: 699 tokens
Parsing completed: 195 AST nodes
fil-c clang compilation failed:
howl-out/howl_program.c:79:16: error: returning 'void *' from a function with incompatible result type 'MyError_int32_t_ErrorUnion' (aka 'struct MyError_int32_t_ErrorUnion')
   79 |         return NULL;
      |                ^~~~
/home/du/Code/howl-lang/fil-c/build/bin/../../pizfix/include/stdlib.h:15:14: note: expanded from macro 'NULL'
   15 | #define NULL ((void*)0)
      |              ^~~~~~~~~~
howl-out/howl_program.c:83:91: warning: braces around scalar initializer [-Wbraced-scalar-init]
   83 |             return (MyError_int32_t_ErrorUnion){.error = MyError_InvalidValue, .payload = {0}};
      |                                                                                           ^~~
howl-out/howl_program.c:86:86: error: initializing 'int32_t' (aka 'int') with an expression of incompatible type 'MyStruct' (aka 'struct MyStruct')
   86 |             return (MyError_int32_t_ErrorUnion){.error = MyError_SUCCESS, .payload = (MyStruct){.field1 = i, .field2 = b}};
      |                                                                                      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
howl-out/howl_program.c:94:90: warning: braces around scalar initializer [-Wbraced-scalar-init]
   94 |     return (0 ? (MyError_int32_t_ErrorUnion){.error = MyError_DivisionByZero, .payload = {0}} : (MyError_int32_t_ErrorUnion){.error = MyError_SUCCESS, .payload = 0});
      |                                                                                          ^~~
2 warnings and 2 errors generated.

Compilation failed with error: error.CompilationFailed
run
+- run howl failure
error: the following command exited with error code 1:
/home/du/Code/howl-lang/zig-out/bin/howl build -tc /home/du/Code/howl-lang/example/simple-program.howl 
Build Summary: 5/7 steps succeeded; 1 failed
run transitive failure
+- run howl failure
error: the following build command failed with exit code 1:
/home/du/Code/howl-lang/.zig-cache/o/f573e3d79b846aeb8f06c94550668775/build /home/du/Code/howl-lang/zig-install/zig zig-install/lib /home/du/Code/howl-lang /home/du/Code/howl-lang/.zig-cache /home/du/.cache/zig --seed 0xd1f0dc16 -Z2918a8281d0c784b run -- build -tc /home/du/Code/howl-lang/example/simple-program.howl
